<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/menu_record_route"
    android:icon="@drawable/ic_menu_recordtrack"
    android:title="@string/menu_record_route"/>

  <item android:id="@+id/menu_stop_recording"
    android:icon="@drawable/ic_menu_stoprecording"
    android:title="@string/menu_stop_recording"/>

  <item android:id="@+id/menu_routes"
    android:icon="@drawable/ic_menu_tracklist"
    android:title="@string/menu_routes"/>

  
  <item android:id="@+id/menu_settings"
    android:icon="@android:drawable/ic_menu_preferences"
    android:orderInCategory="1001"
    android:title="@string/menu_settings"/>
    
  <item android:id="@+id/menu_aggregated_statistics"
    android:orderInCategory="1002"
    android:title="@string/menu_aggregated_statistics"/>
    

</menu>
